APIs for actual stats (one value)
